# aRTist-PythonLib

./: .gitignore  README.md  pyproject.toml  setup.py
artistlib/: api.py  remote_connection.py
artistlib/trajectory/: __init__.py  ct_trajectories.py
artistlib/utility/: __init__.py  load_projection.py
examples/: 01_api_example.py  02_circular_trajectory.py  03_get_spectrum.py  04_save_image.py
src/artist_pythonlib/: __init__.py  api.py  common_types.py  remote_connection.py
src/artist_pythonlib/geometries/: __init__.py  standard_format.py  thd_format.py
src/artist_pythonlib/hardware/: __init__.py  base_hardware.py  xray_detector.py  xray_source.py
src/artist_pythonlib/trajectory/: __init__.py  ct_trajectories.py
src/artist_pythonlib/utility/: __init__.py  load_projection.py
